# docs/swagger.json
@@ -26,9 +26,9 @@
         "version": "1.0"
     },
     "host": "localhost:8080",
-    "basePath": "/api/v1",
+    "basePath": "/",
     "paths": {
-        "/{group_id}/users/{user_id}/accounts": {
+        "/hello": {
             "get": {
                 "security": [
                     {
